# sde-hjb-solver

./: .gitignore  LICENSE.md  Makefile  README.md  setup.cfg
examples/: doublewell1d_mgf_metastability_climb.ipynb  doublewell2d_mgf.ipynb  overdamped_langevin_doublewell1d_mgf_metastability_climb.ipynb  overdamped_langevin_doublewell2d_mgf.ipynb  overdamped_langevin_triplewell2d_committor.ipynb  triplewell2d_committor.ipynb
src/sde_hjb_solver/: base_parser.py  compute_hjb_solution_1d.py  compute_hjb_solution_1d_det.py  compute_hjb_solution_1d_st.py  compute_hjb_solution_1d_st_bounded.py  compute_hjb_solution_2d_st.py  compute_hjb_solution_det_1d.py  config_template.py  controlled_sde.py  controlled_sde_1d.py  controlled_sde_2d.py  figures.py  functions.py  hjb_solver.py  hjb_solver_1d.py  hjb_solver_1d_det.py  hjb_solver_1d_st.py  hjb_solver_1d_st_bounded.py  hjb_solver_2d_st.py  models.py  models_torch.py  temp.py  utils.py  utils_path.py
